manifests/mongo-statefulset.yml
# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: mongo-deployment
# spec:
#   serviceName: mongo  # Must match the headless service name
#   replicas: 3
#   selector:
#     matchLabels:
#       app: mongo
#   template:
#     metadata:
#       name: mongo-pods
#       labels:
#         app: mongo
#     spec:
#       containers:
#         - name: mongo
#           image: mongo:3.6
#           args: ["--replSet", "rs0", "--bind_ip_all"]
#           ports:
#             - containerPort: 27017
#           volumeMounts:
#             - name: mongo-persistent-storage
#               mountPath: /data/db
#   volumeClaimTemplates:
#     - metadata:
#         name: mongo-persistent-storage
#       spec:
#         accessModes: ["ReadWriteOnce"]
#         resources:
#           requests:
#             storage: 1Gi

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: mongo
# spec:
#   clusterIP: None  # Makes it headless
#   selector:
#     app: mongo
#   ports:
#     - port: 27017
#       targetPort: 27017

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      name: mongo-pods
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
