manifests/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test-app
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      name: server-pods
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: dekcode/todo-api:v5
          # env:
          #   - name: MONGO_URI
          #     value: "mongodb://mongo-0.mongo:27017,mongo-1.mongo:27017,mongo-2.mongo:27017/todo?replicaSet=rs0"
---
apiVersion: v1
kind: Service
metadata:
  namespace: test-app
  name: server-service-nodeport
spec:
  type: NodePort
  selector:
    app: server
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
---
apiVersion: v1
kind: Service
metadata:
  namespace: test-app
  name: server-service
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - port: 80
      targetPort: 80
